# Resume_analyzer

./: .env.example  .gitignore  Makefile  README.md  async_runner.py  docker-compose.yml  docker_compose.gpu.yml  gen_data.py  pyproject.toml
Dockerfiles/fastapi_service/: Dockerfile
Dockerfiles/fastapi_service_gpu/: Dockerfile
fastapi_service/: __init__.py  __main__.py
fastapi_service/api/v1/: model_server.py
fastapi_service/services/: model_infer.py  model_loader.py  model_preprocc.py
fastapi_service/settings/: logger.py  settings.py
static/: analyze_lottie.json
streamlit/: main.py  main_edited.py
streamlit/.streamlit/: config.toml
