[tool.poetry]
name = "fastapi_base"
version = "0.1.0"
description = ""
authors = [" John Smith <john@example.com>"]
readme = "README.md"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
poetry = "^1.8.2"
install = "^1.3.5"
boto3 = "^1.34.80"
ecs-logging = "^2.1.0"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
mypy = "^1.7.0"
flake8 = "^6.1.0"
black = { extras = ["jupyter"], version = "^23.11.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
